# Neurolullaby

./: buildozer.spec  main.py  pyproject.toml  readme.md  tts.py  tts_new.py
.buildozer/: state.db
.buildozer/android/app/: main.py
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/: dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/dists/myapp/src/main/res/values/: strings.xml
cmsn_python/: Jul 3 error report.txt
cmsn_python/examples/example/: example.py
cmsn_python/examples/gui/: gui.py  mainwindow.py  test_time_delay.py
cmsn_python/lib/: crimson_sdk.py
cmsn_python/libcmsn/: crimson_sdk.h
cmsn_python/libcmsn/mac/: libcmsn-arm64.dylib  libcmsn-x86_64.dylib  libcmsn.dylib
kivy_env/: pyvenv.cfg
